CHANGES IN VERSION 0.2.x
------------------------

NEW FEATURES

  o `scoreSingleSamples` is another wrapper function which calls several single
    sample geneset scoring algorithms, including the ones provided by the
    GSVA package (such as plage and ssGSEA)

  o Adds expression-utils.R for CPM/RPKM and meltx. Also has methods to
    facilitate "universal access" to pData, fData, and expression data from
    the different often-used expression containers
    (ExpressionSet, EList, DGEList, SummarizedExperiment)

  o MSigDB definitions were updated to v5.0, which adds a new "hallmark (h)"
    gene set. A call to `getMSigDBset` without a version parameter will return
    the v5.0 data.

    Note that MSigDB provides the entrez IDs for each geneset as human genes.
    The mouse version of these gene sets was constructing by mapping the
    human entrez ID's to their mouse orthologs via `igis::orthologs`. When
    this mapping returns multiple mouse IDs for a single human ID, all of
    the mouse IDs are kept in the mouse geneset.

    To get the previous v4.0 genesets (provided by WEHI), you would simply
    specify version='v4.0' in the getMSigDBSet like so:

      gdb5 <- getMSigDBsetc(c('c2', 'c7'), species='mouse')
      gdb4 <- getMSigDBsetc(c('c2', 'c7'), species='mouse', version='v4.0')

  o Added J-G statistic calculation as additional measure to summarize geneset
    effects in `geneSetFeatureStatistics` and for ranking (result(..., rank.by))


BUG FIXES


CHANGES IN VERSION 0.1
----------------------

NEW FEATURES

  o `multiGSEA` returns a `MultiGSEAResult` object which holds all of the things
    one would need to analyze/plot/poke at the results of the function call.

  o Plotting functions added so user can plot results of arbitrary genesets.

SIGNIFICANT USER-VISIBLE CHANGES

  o This version is a reboots the internals of this package so that its design
    is cleaner. All of the reporting bits were removed (rmd.plugins handles that