@@ -1,5 +1,6 @@
 # Generated by roxygen2 (4.1.1): do not edit by hand
 
+S3method(all.equal,GeneSetDb)
 S3method(as.list,GeneSetDb)
 export(CPM)
 export(GeneSetDb)
@@ -48,11 +49,15 @@ import(GSEABase)
 import(limma)
 import(reactome.db)
 importFrom(BiocGenerics,append)
+importFrom(GSEABase,GeneSet)
+importFrom(GSEABase,GeneSetCollection)
+importFrom(GSEABase,geneIds)
+importFrom(GSEABase,organism)
+importFrom(GSEABase,setName)
 importFrom(GSVA,gsva)
 importFrom(data.table,setnames)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
-importFrom(matrixStats,rowVars)
 importFrom(reshape2,melt)
 importFrom(stringr,str_extract)
 importMethodsFrom(AnnotationDbi,keys)
